tests/checker/diagnostics/0153_adt_record_pattern_annotation_mismatch_03.ml
type rec_gamma = { count : int; flag : bool }
let { count = (gamma : bool); flag = other_gamma } =
  { count = 2; flag = true }
